--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <script src="functions.js"defer></script>
 </head>
 <body>
-    <button type="button" id="button">New Game</button>
+    <div>
+        <button type="button" id="button">New Game</button>
+    </div>
+
     <div class="container hidden"></div>
 </body>
 </html>
