--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="functions.js"defer></script>
 </head>
 <body>
-    <div>
+    <div class="header">
+        <h1> Tic-Tac-Toe </h1>
         <button type="button" id="button">New Game</button>
     </div>
 
